--- a/tape/package.json
+++ b/tape/package.json
@@ -10,19 +10,37 @@
         "test:unit": "tape test/**.js",
         "test:unit:spec": "tape test/**.js | tap-spec",
         "test:unit:dot": "tape test/**.js | tap-dot",
-        "test:unit:tnyan": "tape test/**.js | tnyan",
+        "test:unit:faucet": "tape test/**.js | faucet",
+        "test:unit:bail": "tape test/**.js | tap-bail",
+        "test:unit:json": "tape test/**.js | tap-json",
+        "test:unit:min": "tape test/**.js | tap-min",
+        "test:unit:nyan": "tape test/**.js | tnyan",
+        "test:unit:pessimist": "tape test/**.js | tap-pessimist",
         "test:unit:prettify": "tap-prettify test/**.js",
+        "test:unit:colortape": "tape test/**.js | colortape",
+        "test:unit:xunit": "tape test/**.js | tap-xunit",
+        "test:unit:difflet": "tape test/**.js | tap-difflet",
         "test:unit:diff": "tape test/**.js | tap-diff",
-        "test:unit:notify": "tape test/**.js | tap-notify"
+        "test:unit:notify": "tape test/**.js | tap-notify",
+        "test:unit:summary": "tape test/**.js | tap-summary"
     },
     "dependencies": {},
     "devDependencies": {
+        "colortape": "^0.1.2",
+        "faucet": "0.0.1",
+        "tap-bail": "^1.0.0",
         "tap-diff": "^0.1.1",
+        "tap-difflet": "^0.7.1",
         "tap-dot": "^2.0.0",
+        "tap-json": "^1.0.0",
+        "tap-min": "^1.2.2",
         "tap-notify": "^1.0.0",
         "tap-nyan": "^1.1.0",
+        "tap-pessimist": "^1.0.1",
         "tap-prettify": "0.0.2",
         "tap-spec": "^5.0.0",
+        "tap-summary": "^4.0.0",
+        "tap-xunit": "^2.3.0",
         "tape": "^4.9.1"
     }
 }
