Change projects' names

--- a/ava/package.json
+++ b/ava/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "warsawjs-workshop-22-checking-dom",
+    "name": "AVA unit testing library overview",
     "version": "1.0.0",
     "description": "",
     "scripts": {
