--- a/jasmine/package.json
+++ b/jasmine/package.json
@@ -1,6 +1,6 @@
 {
     "private": true,
-    "name": "warsawjs-workshop-22-code-coverage",
+    "name": "Jasmine unit testing library overview",
     "description": "",
     "version": "1.0.0",
     "license": "MIT",
