--- a/painless/package.json
+++ b/painless/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "warsawjs-workshop-22-alarm-clock",
+    "name": "Painless unit testing library overview",
     "version": "1.0.0",
     "description": "",
     "scripts": {
