--- a/tape/package.json
+++ b/tape/package.json
@@ -1,6 +1,6 @@
 {
     "private": true,
-    "name": "warsawjs-workshop-22-first-steps",
+    "name": "Tape unit testing library overview",
     "description": "",
     "version": "1.0.0",
     "license": "MIT",
