--- a/tape/package.json
+++ b/tape/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
-    "name": "Tape unit testing library overview",
-    "description": "",
+    "name": "tape_unit_tests",
+    "description": "Tape unit testing library overview",
     "version": "1.0.0",
     "license": "MIT",
     "scripts": {
