--- a/jest/package.json
+++ b/jest/package.json
@@ -7,9 +7,12 @@
     "scripts": {
         "clear:all": "rm -rf node_modules/",
         "test": "npm run test:unit",
-        "test:unit": "jest"
+        "test:unit": "jest",
+        "lint": "eslint __tests__/*.js"
     },
     "devDependencies": {
+        "eslint": "^5.6.0",
+        "eslint-plugin-jest": "^21.22.0",
         "jest": "^23.6.0"
     }
 }
